--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ New York Times Article Search</h1>
             <form id="search-form">
                 <div class="form-group">
                     <label for="search-text">Search Term:</label>
-                    <input type="text" class="form-control" placeholder="Anything" id = "search-text">
+                    <input type="text" class="form-control empty" placeholder="Anything" id = "search-text">
                 </div>
           
                 <div class="form-group">
@@ -54,11 +54,11 @@ New York Times Article Search</h1>
                 </div>
                 <div class="form-group">
                     <label for="start-year">Start Year (Optional):</label>
-                    <input type="number" min="1851" max="2016" class="form-control" id = "start-year" placeholder="1851">
+                    <input type="number" min="1851" max="2016" class="form-control empty" id = "start-year" placeholder="1851">
                 </div>
                 <div class="form-group">
                     <label for="end-year">End Year (Optional):</label>
-                    <input type="number" min="1851" max="2016" class="form-control" id = "end-year" placeholder="2016">
+                    <input type="number" min="1851" max="2016" class="form-control empty" id = "end-year" placeholder="2016">
                 </div>
             
                 <div id="search-btn" type="submit" value="Search" class = "btn btn-default"><span class ="glyphicon glyphicon-search"></span>&nbsp;Search</div>
