--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ New York Times Article Search</h1>
                 </div>
                 <div class="form-group">
                     <label for="start-year">Start Year (Optional):</label>
-                    <input type="number" min="1851" max="2016" class="form-control empty" id = "start-year" placeholder="1851">
+                    <input type="number" min="1851" max="2016" class="form-control empty num" id = "start-year" placeholder="1851">
                 </div>
                 <div class="form-group">
                     <label for="end-year">End Year (Optional):</label>
-                    <input type="number" min="1851" max="2016" class="form-control empty" id = "end-year" placeholder="2016">
+                    <input type="number" min="1851" max="2016" class="form-control empty num" id = "end-year" placeholder="2016">
                 </div>
             
                 <div id="search-btn" type="submit" value="Search" class = "btn btn-default"><span class ="glyphicon glyphicon-search"></span>&nbsp;Search</div>
@@ -78,6 +78,11 @@ New York Times Article Search</h1>
     </div>
 
 </div>
+
+<footer class = "footer text-center">
+    <span>Copyright <i class="fa fa-copyright" aria-hidden="true"></i>2016 Wesley L. Handy</span>
+    <div id = "gh-link"><a href="https://github.com/wesleylhandy/NYTSearch" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></div>
+</footer> 
 
 <!-- custom JavaScript -->
 <script type="text/javascript" src="assets/js/logic.js"></script>
