--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ New York Times Article Search</h1>
 </div>
 
 <footer class = "footer text-center">
-    <span>Copyright <i class="fa fa-copyright" aria-hidden="true"></i>2016 Wesley L. Handy</span>
+    <span>Copyright <i class="fa fa-copyright" aria-hidden="true"></i><span id="year"></span>&nbsp;Wesley L. Handy</span>
     <div id = "gh-link"><a href="https://github.com/wesleylhandy/NYTSearch" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></div>
 </footer> 
 
